infrastructure/configs/istio-ingress/base/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
spec:
  parentRefs:
    - kind: Gateway
      name: ingress
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
        - responseHeaderModifier:
            set:
              - name: Permissions-Policy
                value: geolocation=(), microphone=(), camera=()
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: DENY
              - name: X-Robots-Tag
                value: noindex, nofollow
              - name: X-XSS-Protection
                value: 1; mode=block
          type: ResponseHeaderModifier
